Fixed layout issues in the stepper container and the Mapping step of the stepper
- The Class, Path, Attributes, and Methods sections in the Add Elements tab are now being displayed next to each other, while their values are being displayed under each other.
- There was an issue causing the stepper contents section to overflow/outgrow the stepper container when the amount of content in a step of the stepper exceeded the fixed size of the stepper container. This has been fixed by using flex-grow and height instead of min-height in the stepper component stylesheet.

--- a/converter-frontend/UMLtoOpenAPISpec/src/app/stepper/stepper.component.scss
+++ b/converter-frontend/UMLtoOpenAPISpec/src/app/stepper/stepper.component.scss
@@ -6,9 +6,10 @@
 .stepper-container {
   @apply mt-16 p-5 bg-primary rounded-lg;
   width: 60vw;
-  height: 75vh;
+  min-height: 75vh;
   display: flex;
   flex-direction: column;
+  flex-grow: 1;
 }
 
 .mat-horizontal-stepper {
